parser.output
Terminals which are not used

   _NULL


Grammar

    0 $accept: PROGRAM $end

    1 PROGRAM: /* empty */
    2        | PROGRAM LINE

    3 LINE: STATEMENT _SEMICOLON

    4 STATEMENT: IF_STATEMENT
    5          | ELSE_STATEMENT
    6          | ASSIGN_STATEMENT
    7          | FOR_STATEMENT
    8          | WHILE_STATEMENT
    9          | FUNCTION_STATEMENT
   10          | RETURN_STATEMENT
   11          | PRINT_STATEMENT
   12          | SCAN_STATEMENT
   13          | EXPRESSION_STATEMENT
   14          | CLASS_STATEMENT
   15          | DECLARATION_STATEMENT

   16 IF_STATEMENT: _IF _OPEN_PARENTHESIS EXPRESSION _CLOSE_PARENTHESIS _CURLY_OPEN_BRACKET PROGRAM _CURLY_CLOSE_BRACKET
   17             | _IF _OPEN_PARENTHESIS EXPRESSION _CLOSE_PARENTHESIS _CURLY_OPEN_BRACKET PROGRAM _CURLY_CLOSE_BRACKET ELSE_STATEMENT

   18 ELSE_STATEMENT: _ELSE _CURLY_OPEN_BRACKET PROGRAM _CURLY_CLOSE_BRACKET

   19 ASSIGN_STATEMENT: _ID _ASSIGN EXPRESSION

   20 FOR_STATEMENT: _FOR _OPEN_PARENTHESIS DECLARATION_STATEMENT _SEMICOLON EXPRESSION _SEMICOLON EXPRESSION _CLOSE_PARENTHESIS _CURLY_OPEN_BRACKET PROGRAM _CURLY_CLOSE_BRACKET

   21 WHILE_STATEMENT: _WHILE _OPEN_PARENTHESIS EXPRESSION _CLOSE_PARENTHESIS _CURLY_OPEN_BRACKET PROGRAM _CURLY_CLOSE_BRACKET

   22 FUNCTION_STATEMENT: _FUNCTION TYPE _ID _OPEN_PARENTHESIS _CLOSE_PARENTHESIS _CURLY_OPEN_BRACKET PROGRAM _CURLY_CLOSE_BRACKET
   23                   | _FUNCTION TYPE _ID _OPEN_PARENTHESIS PARAMS _CLOSE_PARENTHESIS _CURLY_OPEN_BRACKET PROGRAM _CURLY_CLOSE_BRACKET

   24 TYPE: _INT
   25     | _FLOAT
   26     | _STRING
   27     | _BOOL
   28     | _VOID

   29 PARAMS: DECLARATION_STATEMENT
   30       | PARAMS _COMMA DECLARATION_STATEMENT
   31       | PARAMS _COMMA _ID
   32       | _ID

   33 RETURN_STATEMENT: _RETURN EXPRESSION

   34 PRINT_STATEMENT: _PRINT _OPEN_PARENTHESIS EXPRESSION _CLOSE_PARENTHESIS

   35 SCAN_STATEMENT: _SCAN _OPEN_PARENTHESIS _ID _CLOSE_PARENTHESIS

   36 EXPRESSION_STATEMENT: EXPRESSION

   37 CLASS_STATEMENT: _CLASS _ID _CURLY_OPEN_BRACKET PROGRAM _CURLY_CLOSE_BRACKET

   38 DECLARATION_STATEMENT: _INT _ID
   39                      | _FLOAT _ID
   40                      | _STRING _ID
   41                      | _BOOL _ID
   42                      | _TABLEAU _ID
   43                      | _ID _ID
   44                      | _INT _ID _ASSIGN EXPRESSION
   45                      | _FLOAT _ID _ASSIGN EXPRESSION
   46                      | _STRING _ID _ASSIGN EXPRESSION
   47                      | _BOOL _ID _ASSIGN EXPRESSION
   48                      | _TABLEAU _ID _ASSIGN EXPRESSION
   49                      | _ID _ID _ASSIGN EXPRESSION
   50                      | _CONST _ID _ASSIGN EXPRESSION

   51 EXPRESSION: EXPRESSION _ADD EXPRESSION
   52           | EXPRESSION _SUB EXPRESSION
   53           | EXPRESSION _MULT EXPRESSION
   54           | EXPRESSION _DIV EXPRESSION
   55           | EXPRESSION _MOD EXPRESSION
   56           | EXPRESSION _POW EXPRESSION
   57           | EXPRESSION _AND EXPRESSION
   58           | EXPRESSION _OR EXPRESSION
   59           | EXPRESSION _INFERIOR EXPRESSION
   60           | EXPRESSION _SUPERIOR EXPRESSION
   61           | EXPRESSION _INFERIOR_EQUAL EXPRESSION
   62           | EXPRESSION _SUPERIOR_EQUAL EXPRESSION
   63           | EXPRESSION _EQUAL EXPRESSION
   64           | EXPRESSION _NON_EQUAL EXPRESSION
   65           | _OPEN_PARENTHESIS EXPRESSION _CLOSE_PARENTHESIS
   66           | _NOT EXPRESSION
   67           | _ID
   68           | _INTVALUE
   69           | _FLOATVALUE
   70           | _BOOLVALUE
   71           | _STRINGVALUE
   72           | OBJECT_VALUE
   73           | _OPEN_BRACKET TABLEVALUE _CLOSE_BRACKET
   74           | FUNCTION_INVOCATION_STATEMENT
   75           | ARRAY_ELEMENT

   76 FUNCTION_INVOCATION_STATEMENT: _ID _OPEN_PARENTHESIS PARAMS _CLOSE_PARENTHESIS

   77 OBJECT_VALUE: OBJECT_VALUE _DOT _ID
   78             | _ID _DOT _ID

   79 ARRAY_ELEMENT: _ID _OPEN_BRACKET _INTVALUE _CLOSE_BRACKET
   80              | _ID _OPEN_BRACKET _ID _CLOSE_BRACKET
   81              | _ID _OPEN_BRACKET ARRAY_ELEMENT _CLOSE_BRACKET

   82 TABLEVALUE: TABLEVALUE _COMMA EXPRESSION
   83           | EXPRESSION_STATEMENT


Terminals, with rules where they appear

$end (0) 0
error (256)
_SCAN (258) 35
_PRINT (259) 34
_IF (260) 16 17
_ELSE (261) 18
_COMMA (262) 30 31 82
_SEMICOLON (263) 3 20
_DOT (264) 77 78
_INT (265) 24 38 44
_FLOAT (266) 25 39 45
_STRING (267) 26 40 46
_BOOL (268) 27 41 47
_TABLEAU (269) 42 48
_NULL (270)
_FUNCTION (271) 22 23
_CONST (272) 50
_CLASS (273) 37
_RETURN (274) 33
_FOR (275) 20
_WHILE (276) 21
_OPEN_PARENTHESIS (277) 16 17 20 21 22 23 34 35 65 76
_CLOSE_PARENTHESIS (278) 16 17 20 21 22 23 34 35 65 76
_CURLY_OPEN_BRACKET (279) 16 17 18 20 21 22 23 37
_CURLY_CLOSE_BRACKET (280) 16 17 18 20 21 22 23 37
_OPEN_BRACKET (281) 73 79 80 81
_CLOSE_BRACKET (282) 73 79 80 81
_ID (283) 19 22 23 31 32 35 37 38 39 40 41 42 43 44 45 46 47 48 49
    50 67 76 77 78 79 80 81
_EQUAL (284) 63
_NON_EQUAL (285) 64
_AND (286) 57
_OR (287) 58
_NOT (288) 66
_INFERIOR (289) 59
_SUPERIOR (290) 60
_INFERIOR_EQUAL (291) 61
_SUPERIOR_EQUAL (292) 62
_ADD (293) 51
_SUB (294) 52
_MULT (295) 53
_DIV (296) 54
_MOD (297) 55
_POW (298) 56
_ASSIGN (299) 19 44 45 46 47 48 49 50
_INTVALUE (300) 68 79
_FLOATVALUE (301) 69
_BOOLVALUE (302) 70
_STRINGVALUE (303) 71
_VOID (304) 28


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
PROGRAM (51)
    on left: 1 2, on right: 0 2 16 17 18 20 21 22 23 37
LINE (52)
    on left: 3, on right: 2
STATEMENT (53)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15, on right: 3
IF_STATEMENT (54)
    on left: 16 17, on right: 4
ELSE_STATEMENT (55)
    on left: 18, on right: 5 17
ASSIGN_STATEMENT (56)
    on left: 19, on right: 6
FOR_STATEMENT (57)
    on left: 20, on right: 7
WHILE_STATEMENT (58)
    on left: 21, on right: 8
FUNCTION_STATEMENT (59)
    on left: 22 23, on right: 9
TYPE (60)
    on left: 24 25 26 27 28, on right: 22 23
PARAMS (61)
    on left: 29 30 31 32, on right: 23 30 31 76
RETURN_STATEMENT (62)
    on left: 33, on right: 10
PRINT_STATEMENT (63)
    on left: 34, on right: 11
SCAN_STATEMENT (64)
    on left: 35, on right: 12
EXPRESSION_STATEMENT (65)
    on left: 36, on right: 13 83
CLASS_STATEMENT (66)
    on left: 37, on right: 14
DECLARATION_STATEMENT (67)
    on left: 38 39 40 41 42 43 44 45 46 47 48 49 50,
    on right: 15 20 29 30
EXPRESSION (68)
    on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
    69 70 71 72 73 74 75, on right: 16 17 19 20 21 33 34 36 44 45 46
    47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 82
FUNCTION_INVOCATION_STATEMENT (69)
    on left: 76, on right: 74
OBJECT_VALUE (70)
    on left: 77 78, on right: 72 77
ARRAY_ELEMENT (71)
    on left: 79 80 81, on right: 75 81
TABLEVALUE (72)
    on left: 82 83, on right: 73 82


state 0

    0 $accept: . PROGRAM $end

    $default  reduce using rule 1 (PROGRAM)

    PROGRAM  go to state 1


state 1

    0 $accept: PROGRAM . $end
    2 PROGRAM: PROGRAM . LINE

    $end               shift, and go to state 2
    _SCAN              shift, and go to state 3
    _PRINT             shift, and go to state 4
    _IF                shift, and go to state 5
    _ELSE              shift, and go to state 6
    _INT               shift, and go to state 7
    _FLOAT             shift, and go to state 8
    _STRING            shift, and go to state 9
    _BOOL              shift, and go to state 10
    _TABLEAU           shift, and go to state 11
    _FUNCTION          shift, and go to state 12
    _CONST             shift, and go to state 13
    _CLASS             shift, and go to state 14
    _RETURN            shift, and go to state 15
    _FOR               shift, and go to state 16
    _WHILE             shift, and go to state 17
    _OPEN_PARENTHESIS  shift, and go to state 18
    _OPEN_BRACKET      shift, and go to state 19
    _ID                shift, and go to state 20
    _NOT               shift, and go to state 21
    _INTVALUE          shift, and go to state 22
    _FLOATVALUE        shift, and go to state 23
    _BOOLVALUE         shift, and go to state 24
    _STRINGVALUE       shift, and go to state 25

    LINE                           go to state 26
    STATEMENT                      go to state 27
    IF_STATEMENT                   go to state 28
    ELSE_STATEMENT                 go to state 29
    ASSIGN_STATEMENT               go to state 30
    FOR_STATEMENT                  go to state 31
    WHILE_STATEMENT                go to state 32
    FUNCTION_STATEMENT             go to state 33
    RETURN_STATEMENT               go to state 34
    PRINT_STATEMENT                go to state 35
    SCAN_STATEMENT                 go to state 36
    EXPRESSION_STATEMENT           go to state 37
    CLASS_STATEMENT                go to state 38
    DECLARATION_STATEMENT          go to state 39
    EXPRESSION                     go to state 40
    FUNCTION_INVOCATION_STATEMENT  go to state 41
    OBJECT_VALUE                   go to state 42
    ARRAY_ELEMENT                  go to state 43


state 2

    0 $accept: PROGRAM $end .

    $default  accept


state 3

   35 SCAN_STATEMENT: _SCAN . _OPEN_PARENTHESIS _ID _CLOSE_PARENTHESIS

    _OPEN_PARENTHESIS  shift, and go to state 44


state 4

   34 PRINT_STATEMENT: _PRINT . _OPEN_PARENTHESIS EXPRESSION _CLOSE_PARENTHESIS

    _OPEN_PARENTHESIS  shift, and go to state 45


state 5

   16 IF_STATEMENT: _IF . _OPEN_PARENTHESIS EXPRESSION _CLOSE_PARENTHESIS _CURLY_OPEN_BRACKET PROGRAM _CURLY_CLOSE_BRACKET
   17             | _IF . _OPEN_PARENTHESIS EXPRESSION _CLOSE_PARENTHESIS _CURLY_OPEN_BRACKET PROGRAM _CURLY_CLOSE_BRACKET ELSE_STATEMENT

    _OPEN_PARENTHESIS  shift, and go to state 46


state 6

   18 ELSE_STATEMENT: _ELSE . _CURLY_OPEN_BRACKET PROGRAM _CURLY_CLOSE_BRACKET

    _CURLY_OPEN_BRACKET  shift, and go to state 47


state 7

   38 DECLARATION_STATEMENT: _INT . _ID
   44                      | _INT . _ID _ASSIGN EXPRESSION

    _ID  shift, and go to state 48


state 8

   39 DECLARATION_STATEMENT: _FLOAT . _ID
   45                      | _FLOAT . _ID _ASSIGN EXPRESSION

    _ID  shift, and go to state 49


state 9

   40 DECLARATION_STATEMENT: _STRING . _ID
   46                      | _STRING . _ID _ASSIGN EXPRESSION

    _ID  shift, and go to state 50


state 10

   41 DECLARATION_STATEMENT: _BOOL . _ID
   47                      | _BOOL . _ID _ASSIGN EXPRESSION

    _ID  shift, and go to state 51


state 11

   42 DECLARATION_STATEMENT: _TABLEAU . _ID
   48                      | _TABLEAU . _ID _ASSIGN EXPRESSION

    _ID  shift, and go to state 52


state 12

   22 FUNCTION_STATEMENT: _FUNCTION . TYPE _ID _OPEN_PARENTHESIS _CLOSE_PARENTHESIS _CURLY_OPEN_BRACKET PROGRAM _CURLY_CLOSE_BRACKET
   23                   | _FUNCTION . TYPE _ID _OPEN_PARENTHESIS PARAMS _CLOSE_PARENTHESIS _CURLY_OPEN_BRACKET PROGRAM _CURLY_CLOSE_BRACKET

    _INT     shift, and go to state 53
    _FLOAT   shift, and go to state 54
    _STRING  shift, and go to state 55
    _BOOL    shift, and go to state 56
    _VOID    shift, and go to state 57

    TYPE  go to state 58


state 13

   50 DECLARATION_STATEMENT: _CONST . _ID _ASSIGN EXPRESSION

    _ID  shift, and go to state 59


state 14

   37 CLASS_STATEMENT: _CLASS . _ID _CURLY_OPEN_BRACKET PROGRAM _CURLY_CLOSE_BRACKET

    _ID  shift, and go to state 60


state 15

   33 RETURN_STATEMENT: _RETURN . EXPRESSION

    _OPEN_PARENTHESIS  shift, and go to state 18
    _OPEN_BRACKET      shift, and go to state 19
    _ID                shift, and go to state 61
    _NOT               shift, and go to state 21
    _INTVALUE          shift, and go to state 22
    _FLOATVALUE        shift, and go to state 23
    _BOOLVALUE         shift, and go to state 24
    _STRINGVALUE       shift, and go to state 25

    EXPRESSION                     go to state 62
    FUNCTION_INVOCATION_STATEMENT  go to state 41
    OBJECT_VALUE                   go to state 42
    ARRAY_ELEMENT                  go to state 43


state 16

   20 FOR_STATEMENT: _FOR . _OPEN_PARENTHESIS DECLARATION_STATEMENT _SEMICOLON EXPRESSION _SEMICOLON EXPRESSION _CLOSE_PARENTHESIS _CURLY_OPEN_BRACKET PROGRAM _CURLY_CLOSE_BRACKET

    _OPEN_PARENTHESIS  shift, and go to state 63


state 17

   21 WHILE_STATEMENT: _WHILE . _OPEN_PARENTHESIS EXPRESSION _CLOSE_PARENTHESIS _CURLY_OPEN_BRACKET PROGRAM _CURLY_CLOSE_BRACKET

    _OPEN_PARENTHESIS  shift, and go to state 64


state 18

   65 EXPRESSION: _OPEN_PARENTHESIS . EXPRESSION _CLOSE_PARENTHESIS

    _OPEN_PARENTHESIS  shift, and go to state 18
    _OPEN_BRACKET      shift, and go to state 19
    _ID                shift, and go to state 61
    _NOT               shift, and go to state 21
    _INTVALUE          shift, and go to state 22
    _FLOATVALUE        shift, and go to state 23
    _BOOLVALUE         shift, and go to state 24
    _STRINGVALUE       shift, and go to state 25
